# pinocchiout

./: .gitignore  README.md  example.py  pyproject.toml
examples/: reqs.yaml
src/pinocchio/: data.py  solver.py  tableator.py
src/pinocchiout/: solver.py
